--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.8.2",
-    "eslint": "^1.1.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-sass": "^2.0.4",
+    "node-normalize-scss": "^1.0.3",
     "require-dir": "^0.3.0",
     "rimraf": "^2.4.2"
   }
