--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.8.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "node-normalize-scss": "^1.0.3",
     "require-dir": "^0.3.0",
