--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "angular": "^1.4.3",
     "browser-sync": "^2.8.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-babel": "^5.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "node-normalize-scss": "^1.0.3",
