--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "media gallery example",
   "main": "index.html",
+  "repository": "https://github.com/xiwcx/media-gallery/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,14 +11,18 @@
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.4.3",
+    "babelify": "^6.1.3",
     "browser-sync": "^2.8.2",
+    "browserify": "^11.0.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-babel": "^5.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
+    "gulp-util": "^3.0.6",
     "node-normalize-scss": "^1.0.3",
     "require-dir": "^0.3.0",
-    "rimraf": "^2.4.2"
+    "rimraf": "^2.4.2",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.3.1"
   }
 }
